--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "cra-template": "1.2.0",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.4.7",
+    "lucide-react": "^0.476.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "shadcn-ui": "^0.9.5",
     "styled-components": "^6.1.14"
   },
   "scripts": {
@@ -37,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3"
   }
 }
